<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">合众小管家</string>
    <string name="version">版本号:v1.0.0</string>
    <string name="action_settings">Settings</string>
    <string name="url">www.zhzszx.com</string>
    <string name="tel">40000000</string>

    <style name="MMTabButton">
        <item name="android:textSize">15.0dip</item>
        <item name="android:gravity">center</item>
        <item name="android:layout_width">fill_parent</item>
        <item name="android:layout_height">fill_parent</item>
        <item name="android:button">@null</item>
        <item name="android:textColor">#ffffff</item>
        <item name="android:layout_weight">1.0</item>
    </style>

    <!-- 下拉刷新，上拉加载更多 -->
    <string name="xlistview_header_hint_normal">下拉刷新</string>
    <string name="xlistview_header_hint_ready">松开刷新数据</string>
    <string name="xlistview_header_hint_loading">正在加载...</string>
    <string name="xlistview_header_last_time">上次更新时间：</string>
    <string name="xlistview_footer_hint_normal">查看更多</string>
    <string name="xlistview_footer_hint_ready">松开载入更多</string>
    <string name="xlistview_footer_hint_end">没有更多了</string>
    <string name="departments">管理部,技术部,服务部,后勤部</string>
    <string name="employeeNoLable">工号:</string>
    <string name="employeeNameLable">姓名:</string>
    <string name="employeePositionLable">职位:</string>
    <string name="employeeTelLable">电话:</string>
    <string name="employeeLevelLable">等级:</string>
    <string name="employeeClickBellLable">点钟:</string>
    <string name="employeeSortBellLable">排钟:</string>
    <string name="title_activity_technician_main">TechnicianMainActivity</string>
    <string name="title_activity_store">StoreActivity</string>
    <string name="title_activity_store_team">Store_Team_Activity</string>
    <string name="title_activity_store_team_list">StoreTeamListActivity</string>
    <string name="title_activity_register">RegisterActivity</string>
    <string name="title_activity_forget_pwd">ForgetPwdActivity</string>
    <string name="title_activity_team_list_view">TeamListViewActivity</string>
    <string name="title_activity_technician_sort">TechnicianSortActivity</string>
    <string name="title_activity_technician_sort_list">TechnicianSortListActivity</string>
    <string name="title_activity_promotion">PromotionActivity</string>
    <string name="title_activity_promotion_use_rule">PromotionUseRuleActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_promotion_view">PromotionViewActivity</string>
    <string name="title_activity_my_promotion">MyPromotionActivity</string>
    <string name="title_activity_messager">MessagerActivity</string>
    <string name="title_activity_message_list">MessageListActivity</string>
    <string name="title_activity_message_new">MessageNewActivity</string>
    <string name="title_activity_my_persons">MyPersonsActivity</string>
    <string name="title_activity_my_persons_list">MyPersonsListActivity</string>
    <string name="title_activity_recommend_circle">RecommendCircleActivity</string>
    <string name="title_activity_my_person_agents">MyPersonAgentsActivity</string>
    <string name="title_activity_apply_agent">ApplyAgentActivity</string>
    <string name="title_activity_opinion">OpinionActivity</string>
    <string name="title_activity_about">AboutActivity</string>
    <string name="title_activity_modify_pwd">ModifyPwdActivity</string>
    <string name="title_activity_person_detail">PersonDetailActivity</string>
    <string name="title_activity_person_detail_modify">PersonDetailModifyActivity</string>
    <string name="title_activity_department_attendance">DepartmentAttendanceActivity</string>
    <string name="title_activity_my_attendance">MyAttendanceActivity</string>
    <string name="title_activity_department_attendance_view">DepartmentAttendanceViewActivity</string>
    <string name="title_activity_vacation">VacationActivity</string>
    <string name="title_activity_vacation_apply">VacationApplyActivity</string>
    <string name="title_activity_vacation_apply_temporary">VacationApplyTemporaryActivity</string>
    <string name="title_activity_my_account">MyAccountActivity</string>
    <string name="title_activity_my_account_list">MyAccountListActivity</string>
    <string name="title_activity_my_account_certification">MyAccountCertificationActivity</string>
    <string name="title_activity_my_account_into">MyAccountIntoActivity</string>
    <string name="title_activity_my_account_out">MyAccountOutActivity</string>
    <string name="title_activity_recommend">RecommendActivity</string>
    <string name="title_activity_store_view">StoreViewActivity</string>

</resources>
