<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:orientation="vertical" 
	android:layout_width="fill_parent"
	android:layout_height="fill_parent">

	<LinearLayout android:orientation="horizontal"
		android:layout_width="fill_parent" 
		android:layout_height="wrap_content"
		android:layout_marginLeft="10dp">
		
		<ImageView android:id="@+id/employeePhoto" 
			android:layout_width="wrap_content"
			android:layout_height="wrap_content" 
			android:layout_gravity="center_vertical"/>
	
		<LinearLayout android:orientation="vertical"
			android:layout_width="wrap_content" 
			android:layout_height="wrap_content"
			android:layout_gravity="center_vertical">
	
		    <LinearLayout android:orientation="horizontal"
				android:layout_width="wrap_content" 
				android:layout_height="wrap_content">
				<TextView android:id="@+id/employeeNoLable"
				    android:layout_width="wrap_content"
					android:layout_height="wrap_content" 
					android:textColor="#000000"
					android:text="@string/employeeNoLable"
					android:textSize="16sp" />
				<TextView android:id="@+id/employeeNo" 
					android:layout_width="wrap_content"
					android:layout_height="wrap_content" 
					android:textColor="#000000"
					android:textSize="16sp" />
			</LinearLayout>
			<LinearLayout android:orientation="horizontal"
				android:layout_width="wrap_content" 
				android:layout_height="wrap_content">
				<TextView android:id="@+id/employeeNameLable"
				    android:layout_width="wrap_content"
					android:layout_height="wrap_content" 
					android:textColor="#000000"
					android:text="@string/employeeNameLable"
					android:textSize="16sp" />
				<TextView android:id="@+id/employeeName" 
					android:layout_width="wrap_content"
					android:layout_height="wrap_content" 
					android:textColor="#000000"
					android:textSize="16sp" />
			</LinearLayout>
			<LinearLayout android:orientation="horizontal"
				android:layout_width="wrap_content" 
				android:layout_height="wrap_content">
				<TextView android:id="@+id/employeePositionLable" 
				    android:layout_width="wrap_content"
					android:layout_height="wrap_content" 
					android:textColor="#000000"
					android:text="@string/employeePositionLable"
					android:textSize="16sp" />
				<TextView android:id="@+id/employeePosition" 
					android:layout_width="wrap_content"
					android:layout_height="wrap_content" 
					android:textColor="#000000"
					android:textSize="16sp" />
			</LinearLayout>
			<LinearLayout android:orientation="horizontal"
				android:layout_width="wrap_content" 
				android:layout_height="wrap_content">
				<TextView android:id="@+id/employeeTelLable" 
				    android:layout_width="wrap_content"
					android:layout_height="wrap_content" 
					android:textColor="#000000"
					android:text="@string/employeeTelLable"
					android:textSize="16sp" />
				<TextView android:id="@+id/employeeTel" 
					android:layout_width="wrap_content"
					android:layout_height="wrap_content" 
					android:textColor="#000000"
					android:textSize="16sp" />
			</LinearLayout>
			<LinearLayout android:orientation="horizontal"
				android:layout_width="wrap_content" 
				android:layout_height="wrap_content">
				<TextView android:id="@+id/employeeLevelLable" 
				    android:layout_width="wrap_content"
					android:layout_height="wrap_content" 
					android:textColor="#000000"
					android:text="@string/employeeLevelLable"
					android:textSize="16sp" />
				<ImageView android:id="@+id/employeeLevel" 
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"  />
			</LinearLayout>
		</LinearLayout>
		<LinearLayout
			android:layout_width="fill_parent" 
			android:layout_height="fill_parent"
			android:gravity="right">
			<ImageView
			    android:layout_width="wrap_content"
			    android:layout_height="wrap_content"
			    android:layout_gravity="center_vertical"
			    android:background="@drawable/list_item_enter" />
		</LinearLayout>

	</LinearLayout>
	<ImageView android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
       	android:layout_marginRight="10dp"
       	android:background="@drawable/login_input_bottom_line"/>
</LinearLayout>