<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:orientation="vertical" 
	android:layout_width="fill_parent"
	android:layout_height="fill_parent">

	<LinearLayout android:orientation="horizontal"
		android:layout_width="fill_parent" 
		android:layout_height="wrap_content"
		android:layout_marginLeft="10dp">
		
		<ImageView android:id="@+id/employeePhoto" 
			android:layout_width="wrap_content"
			android:layout_height="wrap_content" 
			android:layout_gravity="center_vertical"/>
	
		<LinearLayout android:orientation="vertical"
			android:layout_width="fill_parent" 
			android:layout_height="fill_parent"
			android:layout_gravity="center_vertical">
	
		    <LinearLayout android:orientation="horizontal"
				android:layout_width="fill_parent" 
				android:layout_height="wrap_content"
				android:layout_weight="1"
				android:gravity="center_vertical">
				<TextView android:id="@+id/employeeNoLable"
				    android:layout_width="wrap_content"
					android:layout_height="wrap_content" 
					android:textColor="#000000"
					android:text="@string/employeeNoLable"
					android:textSize="18sp" />
				<TextView android:id="@+id/employeeNo" 
					android:layout_width="wrap_content"
					android:layout_height="wrap_content" 
					android:textColor="#000000"
					android:textSize="18sp" />
				<LinearLayout android:orientation="horizontal"
					android:layout_width="fill_parent" 
					android:layout_height="wrap_content"
					android:gravity="right"
					android:layout_marginRight="15dp">
					<TextView android:id="@+id/employeeSortBellLable"
					    android:layout_width="wrap_content"
						android:layout_height="wrap_content" 
						android:textColor="#000000"
						android:text="@string/employeeSortBellLable"
						android:textSize="18sp"/>
					<TextView android:id="@+id/employeeSortBell" 
						android:layout_width="wrap_content"
						android:layout_height="wrap_content" 
						android:textColor="#000000"
						android:textSize="18sp" />
				</LinearLayout>
			</LinearLayout>
			<LinearLayout android:orientation="horizontal"
				android:layout_width="fill_parent" 
				android:layout_height="wrap_content"
				android:layout_weight="1"
				android:gravity="center_vertical">
				<TextView android:id="@+id/employeeNameLable"
				    android:layout_width="wrap_content"
					android:layout_height="wrap_content" 
					android:textColor="#000000"
					android:text="@string/employeeNameLable"
					android:textSize="18sp" />
				<TextView android:id="@+id/employeeName" 
					android:layout_width="wrap_content"
					android:layout_height="wrap_content" 
					android:textColor="#000000"
					android:textSize="18sp" />
			</LinearLayout>
			<LinearLayout android:orientation="horizontal"
				android:layout_width="fill_parent" 
				android:layout_height="wrap_content"
				android:layout_weight="1"
				android:gravity="center_vertical">
				<TextView android:id="@+id/employeeLevelLable" 
				    android:layout_width="wrap_content"
					android:layout_height="wrap_content" 
					android:textColor="#000000"
					android:text="@string/employeeLevelLable"
					android:textSize="18sp" />
				<ImageView android:id="@+id/employeeLevel" 
					android:layout_width="wrap_content"
					android:layout_height="wrap_content" />
				
				<LinearLayout android:orientation="horizontal"
					android:layout_width="fill_parent" 
					android:layout_height="wrap_content"
					android:gravity="right"
					android:layout_marginRight="15dp">
					<TextView android:id="@+id/employeeClickBellLable"
					    android:layout_width="wrap_content"
						android:layout_height="wrap_content" 
						android:textColor="#000000"
						android:text="@string/employeeClickBellLable"
						android:textSize="18sp"/>
					<TextView android:id="@+id/employeeClickBell" 
						android:layout_width="wrap_content"
						android:layout_height="wrap_content" 
						android:textColor="#000000"
						android:textSize="18sp" />
				</LinearLayout>
			</LinearLayout>
		</LinearLayout>

	</LinearLayout>
	<ImageView android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
       	android:layout_marginRight="10dp"
       	android:background="@drawable/login_input_bottom_line"/>
</LinearLayout>